[gd_scene load_steps=6 format=3 uid="uid://birm8d1wfxpdm"]

[ext_resource type="Script" path="res://DeckBuilder/DeckBuilder.gd" id="1_5ijbu"]
[ext_resource type="PackedScene" uid="uid://wtr6bdn7o4m4" path="res://deck_building_card.tscn" id="2_n0sgh"]
[ext_resource type="Script" path="res://DeckBuilder/StartGameButton.gd" id="3_k6vq3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ddqy7"]
bg_color = Color(0.945098, 0.886275, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mrbw4"]
bg_color = Color(0.760784, 0.584314, 0.439216, 1)

[node name="DeckBuilder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5ijbu")
card_scene = ExtResource("2_n0sgh")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ddqy7")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.195
anchor_right = 0.195
offset_left = 0.599976
offset_right = 1545.6
offset_bottom = 963.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CardBook" type="GridContainer" parent="Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 220
theme_override_constants/v_separation = 320
columns = 7

[node name="DeckBuildingCard" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard2" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard3" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard4" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard5" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard6" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard7" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard8" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard9" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard10" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard11" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard12" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard13" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard14" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard15" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard16" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard17" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard18" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard19" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard20" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="DeckBuildingCard21" parent="Panel/MarginContainer/CardBook" instance=ExtResource("2_n0sgh")]
layout_mode = 2
amount = 2

[node name="Deck" type="ItemList" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 375.0
offset_bottom = 960.0
theme_override_colors/font_color = Color(0.164706, 0.164706, 0.164706, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/panel = SubResource("StyleBoxFlat_mrbw4")

[node name="StartGameButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -118.0
offset_right = 375.0
grow_vertical = 0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Start Game
"
script = ExtResource("3_k6vq3")

[node name="PreviousPageButton" type="Button" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.425
anchor_top = 0.941
anchor_right = 0.425
anchor_bottom = 0.941
offset_left = -126.0
offset_top = -50.28
offset_right = 125.0
offset_bottom = 50.72
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 26
disabled = true
text = "<-- Previous Page"

[node name="NextPageButton" type="Button" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.425
anchor_top = 0.941
anchor_right = 0.425
anchor_bottom = 0.941
offset_left = 564.0
offset_top = -50.28
offset_right = 815.0
offset_bottom = 50.72
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 26
text = "Next Page -->"

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="item_clicked" from="Panel/Deck" to="." method="_on_deck_card_clicked"]
[connection signal="pressed" from="Panel/StartGameButton" to="Panel/StartGameButton" method="_on_pressed"]
[connection signal="pressed" from="Panel/PreviousPageButton" to="." method="_on_previous_page_button_pressed"]
[connection signal="pressed" from="Panel/NextPageButton" to="." method="_on_next_page_button_pressed"]
